[gd_scene load_steps=14 format=2]

[ext_resource path="res://will/will.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/env.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/boss/boss.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://world/areas/boss/anxietyB.gd" type="Script" id=5]
[ext_resource path="res://characters/player/camera/playercamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/tilesets/ground1.tres" type="TileSet" id=7]
[ext_resource path="res://mechanics/grappleswingcheck.gd" type="Script" id=8]
[ext_resource path="res://world/tools/scenechanger.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 155.5, 34.75 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 2.76136, 0, 0, Vector2( 1, 0 ), -2.2875, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=10]
trail_divisor = 11
emission_shape = 2
emission_box_extents = Vector3( 2000, 300, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 44.51
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.74
scale_curve = SubResource( 11 )
color = Color( 3, 0, 0, 1 )

[node name="AnxietyB" type="Node2D"]
script = ExtResource( 5 )

[node name="Boss" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -5 )

[node name="G" type="TileMap" parent="."]
modulate = Color( 0, 0.643137, 0.866667, 1 )
scale = Vector2( 0.125, 0.125 )
tile_set = ExtResource( 7 )
cell_size = Vector2( 128, 128 )
format = 1
script = ExtResource( 8 )
grapple = true

[node name="N" type="TileMap" parent="."]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.125, 0.125 )
tile_set = ExtResource( 7 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -393237, 0, 8, -393236, 0, 10, -393235, 0, 10, -393234, 0, 10, -393233, 0, 10, -393232, 0, 10, -393231, 0, 10, -393230, 0, 10, -393229, 0, 10, -393228, 0, 10, -393227, 0, 10, -393226, 0, 10, -393225, 0, 10, -393224, 0, 10, -393223, 0, 10, -393222, 0, 10, -393221, 0, 10, -393220, 0, 10, -393219, 0, 10, -393218, 0, 10, -393217, 0, 10, -458752, 0, 10, -458751, 0, 10, -458750, 0, 10, -458749, 0, 10, -458748, 0, 10, -458747, 0, 10, -458746, 0, 10, -458745, 0, 10, -458744, 0, 10, -458743, 0, 10, -458742, 0, 10, -458741, 0, 10, -458740, 0, 10, -458739, 0, 10, -458738, 0, 10, -458737, 0, 10, -458736, 0, 10, -458735, 0, 10, -458734, 0, 10, -458733, 0, 10, -458732, 0, 11, -327701, 0, 65544, -327700, 0, 131078, -327699, 0, 196617, -327698, 0, 196617, -327697, 0, 196617, -327696, 0, 196617, -327695, 0, 196617, -327694, 0, 196617, -327693, 0, 196617, -327692, 0, 196617, -327691, 0, 196617, -327690, 0, 196617, -327689, 0, 196617, -327688, 0, 196617, -327687, 0, 196617, -327686, 0, 196617, -327685, 0, 196617, -327684, 0, 196617, -327683, 0, 196617, -327682, 0, 196617, -327681, 0, 196617, -393216, 0, 196617, -393215, 0, 196617, -393214, 0, 196617, -393213, 0, 196617, -393212, 0, 196617, -393211, 0, 196617, -393210, 0, 196617, -393209, 0, 196617, -393208, 0, 196617, -393207, 0, 196617, -393206, 0, 196617, -393205, 0, 196617, -393204, 0, 196617, -393203, 0, 196617, -393202, 0, 196617, -393201, 0, 196617, -393200, 0, 196617, -393199, 0, 196617, -393198, 0, 196617, -393197, 0, 131077, -393196, 0, 131083, -262165, 0, 65544, -262164, 0, 131083, -327661, 0, 65544, -327660, 0, 131083, -196629, 0, 65544, -196628, 0, 131083, -262125, 0, 65544, -262124, 0, 131083, -131093, 0, 65544, -131092, 0, 131083, -196589, 0, 65544, -196588, 0, 131083, -65557, 0, 65544, -65556, 0, 131083, -131053, 0, 65544, -131052, 0, 131083, -21, 0, 65544, -20, 0, 131083, -65517, 0, 65544, -65516, 0, 131083, 65515, 0, 65544, 65516, 0, 131083, 19, 0, 65544, 20, 0, 131083, 131051, 0, 65544, 131052, 0, 131083, 65555, 0, 65544, 65556, 0, 131083, 196587, 0, 65544, 196588, 0, 131083, 131091, 0, 65544, 131092, 0, 131083, 262123, 0, 65544, 262124, 0, 131083, 196627, 0, 65544, 196628, 0, 131083, 327659, 0, 65544, 327660, 0, 131083, 262163, 0, 65544, 262164, 0, 131083, 393195, 0, 65544, 393196, 0, 131083, 327699, 0, 65544, 327700, 0, 131083, 458731, 0, 65544, 458732, 0, 131083, 393235, 0, 65544, 393236, 0, 131083, 524267, 0, 65544, 524268, 0, 131083, 458771, 0, 65544, 458772, 0, 131083, 589803, 0, 65544, 589804, 0, 131083, 524307, 0, 65544, 524308, 0, 131083, 655339, 0, 65544, 655340, 0, 131083, 589843, 0, 65544, 589844, 0, 131083, 720875, 0, 65544, 720876, 0, 131083, 655379, 0, 65544, 655380, 0, 131083, 786411, 0, 65544, 786412, 0, 131083, 720915, 0, 65544, 720916, 0, 131083, 851947, 0, 65544, 851948, 0, 131083, 786451, 0, 65544, 786452, 0, 131083, 917483, 0, 65544, 917484, 0, 131083, 851987, 0, 65544, 851988, 0, 131083, 983019, 0, 65544, 983020, 0, 131083, 917523, 0, 65544, 917524, 0, 131083, 1048555, 0, 65544, 1048556, 0, 65542, 1048557, 0, 10, 1048558, 0, 10, 1048559, 0, 10, 1048560, 0, 10, 1048561, 0, 10, 1048562, 0, 10, 1048563, 0, 10, 1048564, 0, 10, 1048565, 0, 10, 1048566, 0, 10, 1048567, 0, 10, 1048568, 0, 10, 1048569, 0, 10, 1048570, 0, 10, 1048571, 0, 10, 1048572, 0, 10, 1048573, 0, 10, 1048574, 0, 10, 1048575, 0, 10, 983040, 0, 10, 983041, 0, 10, 983042, 0, 10, 983043, 0, 10, 983044, 0, 10, 983045, 0, 10, 983046, 0, 10, 983047, 0, 10, 983048, 0, 10, 983049, 0, 10, 983050, 0, 10, 983051, 0, 10, 983052, 0, 10, 983053, 0, 10, 983054, 0, 10, 983055, 0, 10, 983056, 0, 10, 983057, 0, 10, 983058, 0, 10, 983059, 0, 65541, 983060, 0, 131083, 1114091, 0, 65544, 1114092, 0, 131081, 1114093, 0, 131081, 1114094, 0, 131081, 1114095, 0, 131081, 1114096, 0, 131081, 1114097, 0, 131081, 1114098, 0, 131081, 1114099, 0, 131081, 1114100, 0, 131081, 1114101, 0, 131081, 1114102, 0, 131081, 1114103, 0, 131081, 1114104, 0, 131081, 1114105, 0, 131081, 1114106, 0, 131081, 1114107, 0, 131081, 1114108, 0, 131081, 1114109, 0, 131081, 1114110, 0, 131081, 1114111, 0, 131081, 1048576, 0, 131081, 1048577, 0, 131081, 1048578, 0, 131081, 1048579, 0, 131081, 1048580, 0, 131081, 1048581, 0, 131081, 1048582, 0, 131081, 1048583, 0, 131081, 1048584, 0, 131081, 1048585, 0, 131081, 1048586, 0, 131081, 1048587, 0, 131081, 1048588, 0, 131081, 1048589, 0, 131081, 1048590, 0, 131081, 1048591, 0, 131081, 1048592, 0, 131081, 1048593, 0, 131081, 1048594, 0, 131081, 1048595, 0, 131081, 1048596, 0, 131083, 1179627, 0, 65544, 1179628, 0, 131081, 1179629, 0, 131081, 1179630, 0, 131081, 1179631, 0, 131081, 1179632, 0, 131081, 1179633, 0, 131081, 1179634, 0, 131081, 1179635, 0, 131081, 1179636, 0, 131081, 1179637, 0, 131081, 1179638, 0, 131081, 1179639, 0, 131081, 1179640, 0, 131081, 1179641, 0, 131081, 1179642, 0, 131081, 1179643, 0, 131081, 1179644, 0, 131081, 1179645, 0, 131081, 1179646, 0, 131081, 1179647, 0, 131081, 1114112, 0, 131081, 1114113, 0, 131081, 1114114, 0, 131081, 1114115, 0, 131081, 1114116, 0, 131081, 1114117, 0, 131081, 1114118, 0, 131081, 1114119, 0, 131081, 1114120, 0, 131081, 1114121, 0, 131081, 1114122, 0, 131081, 1114123, 0, 131081, 1114124, 0, 131081, 1114125, 0, 131081, 1114126, 0, 131081, 1114127, 0, 131081, 1114128, 0, 131081, 1114129, 0, 131081, 1114130, 0, 131081, 1114131, 0, 131081, 1114132, 0, 131083, 1245163, 0, 196616, 1245164, 0, 196617, 1245165, 0, 196617, 1245166, 0, 196617, 1245167, 0, 196617, 1245168, 0, 196617, 1245169, 0, 196617, 1245170, 0, 196617, 1245171, 0, 196617, 1245172, 0, 196617, 1245173, 0, 196617, 1245174, 0, 196617, 1245175, 0, 196617, 1245176, 0, 196617, 1245177, 0, 196617, 1245178, 0, 196617, 1245179, 0, 196617, 1245180, 0, 196617, 1245181, 0, 196617, 1245182, 0, 196617, 1245183, 0, 196617, 1179648, 0, 196617, 1179649, 0, 196617, 1179650, 0, 196617, 1179651, 0, 196617, 1179652, 0, 196617, 1179653, 0, 196617, 1179654, 0, 196617, 1179655, 0, 196617, 1179656, 0, 196617, 1179657, 0, 196617, 1179658, 0, 196617, 1179659, 0, 196617, 1179660, 0, 196617, 1179661, 0, 196617, 1179662, 0, 196617, 1179663, 0, 196617, 1179664, 0, 196617, 1179665, 0, 196617, 1179666, 0, 196617, 1179667, 0, 196617, 1179668, 0, 196619 )
script = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 221 )

[node name="Will" parent="." instance=ExtResource( 1 )]

[node name="WorldEnvironment" parent="." instance=ExtResource( 2 )]

[node name="Bg1" parent="WorldEnvironment/ParallaxBackground/ParallaxLayer" index="0"]
modulate = Color( 1, 0, 0, 1 )

[node name="ColorRect" parent="WorldEnvironment/PlayerFog" index="0"]
color = Color( 0, 0, 0, 1 )

[node name="PlayerCamera" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 76 )
mode = 3
path_to_player = NodePath("../Player")
camera_point = Vector2( 0, 76 )

[node name="SceneChanger" parent="." instance=ExtResource( 9 )]
position = Vector2( -256, -407 )
scene_path = "res://world/areas/anxiety/anxiety2.tscn"

[node name="CollisionShape2D" parent="SceneChanger" index="0"]
position = Vector2( 20.5, -23 )
shape = SubResource( 2 )

[node name="AnxietyParticles" type="Particles2D" parent="."]
position = Vector2( -286, -59 )
amount = 2875
lifetime = 2.1
preprocess = 2.29
visibility_rect = Rect2( -2500, -400, 5000, 800 )
process_material = SubResource( 10 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 40

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 0, 0 )

[connection signal="dead" from="Boss" to="." method="_on_Boss_dead"]

[editable path="WorldEnvironment"]
[editable path="SceneChanger"]
